RAT-560: Add changelog entry and add test to verify no external entities can be defined in xml input in RAT